--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "sass": "^1.38.1",
     "sass-loader": "^11.1.1",
     "style-loader": "^2.0.0",
+    "stylelint": "^13.13.1",
     "terser-webpack-plugin": "^5.1.4",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
